[gd_scene format=3 uid="uid://dofttpydh7hri"]

[ext_resource type="Script" uid="uid://7sy2j2dkmghv" path="res://scripts/chasm_chunk.gd" id="1_q61qq"]

[node name="ChasmChunk" type="Node2D" unique_id=1297083911]
script = ExtResource("1_q61qq")
landing_width = 300.0

[node name="RampBody" type="StaticBody2D" parent="." unique_id=1948681960]

[node name="Polygon2D" type="Polygon2D" parent="RampBody" unique_id=954295586]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RampBody" unique_id=21004626]

[node name="Line2D" type="Line2D" parent="RampBody" unique_id=431298750]

[node name="LandingBody" type="StaticBody2D" parent="." unique_id=1197118813]

[node name="Polygon2D" type="Polygon2D" parent="LandingBody" unique_id=522694148]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LandingBody" unique_id=256337402]

[node name="Line2D" type="Line2D" parent="LandingBody" unique_id=486006417]

[node name="DeathZone" type="Area2D" parent="." unique_id=1648260562]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone" unique_id=1712223759]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." unique_id=1550035081]
rect = Rect2(-500, -1000, 3000, 2500)
